// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageDifference alphaBackground 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;

exports[`imageDifference border 1`] = `
Object {
  "pixels": 10,
  "score": 0,
  "scoreRaw": 0.00001272264631043257,
}
`;

exports[`imageDifference boxShadow 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;

exports[`imageDifference fontAliasing 1`] = `
Object {
  "pixels": 2128,
  "score": 0.010829516539440203,
  "scoreRaw": 0.010829516539440203,
}
`;

exports[`imageDifference imageCompression 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;

exports[`imageDifference imageCompression2 1`] = `
Object {
  "pixels": 962,
  "score": 0.004423903796187717,
  "scoreRaw": 0.004423903796187717,
}
`;

exports[`imageDifference imageCompression3 1`] = `
Object {
  "pixels": 1170,
  "score": 0.0015234375,
  "scoreRaw": 0.0015234375,
}
`;

exports[`imageDifference simple 1`] = `
Object {
  "pixels": 501292,
  "score": 0.30696671871651204,
  "scoreRaw": 0.30696671871651204,
}
`;

exports[`imageDifference simple with enough fuzz 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;
